--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 ## 连接超时时间（毫秒）
 spring.redis.timeout=0
+## kafka地址
+kafka.bootstrapAddress=localhost:9092
+message.topic.name=baeldung
+greeting.topic.name=greeting
+filtered.topic.name=filtered
+partitioned.topic.name=partitioned
